fix spacing in results page

--- a/client/src/components/Results/Results.css
+++ b/client/src/components/Results/Results.css
@@ -386,19 +386,13 @@ body #cda-remove {
 	}
 	 */
 	figure.effect-bubba .result {
-		padding-top: 39%;
-		-webkit-transition: -webkit-transform 0.35s;
-		transition: transform 0.35s;
-		-webkit-transform: translate3d(0,-20px,0);
-		transform: translate3d(0,-20px,0);
-	}
-
-	figure.effect-bubba .back {
 		padding-top: 24%;
 		-webkit-transition: -webkit-transform 0.35s;
 		transition: transform 0.35s;
 		-webkit-transform: translate3d(0,-20px,0);
 		transform: translate3d(0,-20px,0);
 	}
+
+
 
 }
